# cdec_maps

./: .coveragerc  .gitattributes  .gitignore  README.rst  cdec.py  cdecmap_builder.py  environment.yml  pyproject.toml  run_server.sh  run_server_cache_build.sh  setup.cfg  setup.py  start_jupyter.sh
cdec_maps/: __main__.py  _version.py  cache_cdec.py  cdec.py  cdec_cache.py  cdec_cache_build.py  cdec_maps_servable.py  cdecuimgr.py  cli.py  map_selection_display.py  maps.py  panels.py
conda.recipe/: meta.yaml
notebooks/: Delta_Simplified.geojson  Legal_Delta_Boundary.geojson  cache_cdec.ipynb  cdec_delta_stations.ipynb  cdec_plotter_all_single_station.ipynb  cdec_precip_interpolations.ipynb  cdec_precip_map.ipynb  cdec_read_station_data.ipynb  delta_stations_clickable_map.ipynb  precip_accum_animation.ipynb  read_cdec_urls.ipynb  river_forecast.ipynb  stations_map.ipynb  stations_with_meta_info.csv  test_map_selection_display.ipynb
tests/: junit.xml  read_cdec_urls.py  test_cdec_data_read.py  test_cdec_read_urls.py  test_cli.py
