[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cdec-maps"
description = "CDEC Maps and Dashboards"
license = { text = "MIT" }
authors = [
    { name = "Nicky Sandhu", email = "psandhu@water.ca.gov" }
]
urls = { "Homepage" = "https://github.com/dwr-psandhu/cdec-maps" }
keywords = ["cdec-maps"]
classifiers = [
    "Programming Language :: Python :: 3.10"
]
dynamic = ["version"]
dependencies = [
    "ipykernel",
    "pyarrow",
    "pandas",
    "dask",
    "numba",
    "aiohttp",
    "requests",
    "decorator",
    "lxml",
    "html5lib",
    "beautifulsoup4",
    "cartopy",
    "geopandas",
    "holoviews",
    "hvplot",
    "matplotlib",
    "bokeh",
    "geoviews",
    "spatialpandas",
    "panel"
]

[project.scripts]
cdec_maps = "cdec_maps.cli:cli"

[tool.setuptools_scm]
write_to = "cdec_maps/_version.py"